[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "deviantart-gallery-downloader"
version = "1.7.3"
description = "Download full DeviantArt galleries, sparing the API quota for mature content"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Sergio Rodríguez", email = "srodriguez3441@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25",
]
keywords = ["deviantart", "downloader", "gallery", "art", "scraper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/Nibblex/DeviantartDownloader"
Repository = "https://github.com/Nibblex/DeviantartDownloader"

[project.scripts]
deviantart-downloader = "deviantart_downloader.cli:main"

[tool.setuptools]
packages = ["deviantart_downloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=deviantart_downloader --cov-report=term-missing"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
